--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="COP4331C.mozart">
+    package="com.example.thefirstorder.mozart">
+    <!-- This is for creating the MozArt Folder -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
 
     <application
         android:allowBackup="true"
@@ -8,16 +10,27 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".TestActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".Startup">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".HomePage" />
+        <activity android:name=".About" />
+        <activity
+            android:name=".options"
+            android:label="@string/title_activity_options" />
+        <activity android:name=".images" />
+        <activity
+            android:name=".MusicLibrary"
+            android:label="@string/title_activity_music_library"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".Player"
+            android:label="Songs"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
